--- a/Blog/.env
+++ b/Blog/.env
@@ -2,15 +2,15 @@ PORT = 8081
 
 DATABASE_URL= 'mysql://root:123@localhost:3307/Blog_DB'
 
-MYSQL_HOST = 'localhost'
-MYSQL_DATABASE = 'blogdb'
-MYSQL_USER = 'root'
-MYSQL_PASSWORD = '123456789'
-MYSQL_PORT= '3306'
+# MYSQL_HOST = 'localhost'
+# MYSQL_DATABASE = 'blogdb'
+# MYSQL_USER = 'root'
+# MYSQL_PASSWORD = '123456789'
+# MYSQL_PORT= '3306'
 
 #JWT_CREDENTIAL
 ACCESS_TOKEN_SECRET = Access_Token_Secret_LongLQ2
 REFRESH_TOKEN_SECRET = Refresh_Token_Secret_Longlq2
-ACCESS_TOKEN_LIFE = 5m
+ACCESS_TOKEN_LIFE = 2m
 REFRESH_TOKEN_LIFE = 24h
 REFRESH_TOKEN_SIZE = 100
