the first deploy on heroku

--- a/.env
+++ b/.env
@@ -1,6 +1,7 @@
 PORT = 8081
 
-DATABASE_URL= 'mysql://root:123@localhost:3307/Blog_DB'
+# DATABASE_URL= 'mysql://root:123@localhost:3307/Blog_DB'
+DATABASE_URL= 'mysql://bac83ab2a7c4ed:0f6638d4@us-cdbr-east-06.cleardb.net/heroku_9364cac7f3b8a6c'
 
 # MYSQL_HOST = 'localhost'
 # MYSQL_DATABASE = 'blogdb'
