--- a/package.json
+++ b/package.json
@@ -29,6 +29,8 @@
     "nodemon": "^2.0.20",
     "prisma": "^4.5.0",
     "rand-token": "^1.0.1",
+    "swagger-jsdoc": "^6.2.5",
+    "swagger-ui-express": "^4.6.0",
     "ts-node": "^10.9.1",
     "typescript": "^4.8.4",
     "util": "^0.12.5"
@@ -36,6 +38,8 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
-    "@types/jsonwebtoken": "^8.5.9"
+    "@types/jsonwebtoken": "^8.5.9",
+    "@types/swagger-jsdoc": "^6.0.1",
+    "@types/swagger-ui-express": "^4.1.3"
   }
 }
