--- a/package.json
+++ b/package.json
@@ -19,6 +19,8 @@
     "@types/express": "^4.17.14",
     "@types/node": "^18.11.4",
     "bcrypt": "^5.1.0",
+    "chai": "^4.3.7",
+    "chai-http": "^4.3.0",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
@@ -40,6 +42,7 @@
     "@types/bcrypt": "^5.0.0",
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^8.5.9",
+    "@types/mocha": "^10.0.0",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3"
   }
