--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 PORT = 8080
 
-# DATABASE_URL= 'mysql://root:123@localhost:3307/Blog_DB'
+DATABASE_URL_TEST= 'mysql://root:123@localhost:3307/Blog_DB'
 DATABASE_URL= 'mysql://b39301c1923da5:1e60e9fd@us-cdbr-east-06.cleardb.net/heroku_3774f9edf6634c5'
 
 # MYSQL_HOST = 'localhost'
