--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   },
   "scripts": {
     "prestart": "tsc",
-    "test": "echo \"Error: no test specified\" && exit 1",
+    "test": "tsc && jest ./dist/test/user.test.js",
     "start": "node ./dist/index.js",
     "postinstall": "tsc"
   },
@@ -17,18 +17,22 @@
   "dependencies": {
     "@prisma/client": "^4.5.0",
     "@types/express": "^4.17.14",
+    "@types/jest": "^29.2.3",
     "@types/node": "^18.11.4",
     "bcrypt": "^5.1.0",
     "chai": "^4.3.7",
     "chai-http": "^4.3.0",
+    "chai-jest": "^1.0.3",
     "cookie-parser": "^1.4.6",
     "dotenv": "^16.0.3",
     "express": "^4.18.2",
     "express-validation": "^4.1.0",
+    "jest": "^29.3.1",
     "joi": "^17.6.4",
     "jsonwebtoken": "^8.5.1",
     "mysql": "^2.18.1",
     "node": "^19.0.0",
+    "node-mocks-http": "^1.12.1",
     "nodemon": "^2.0.20",
     "prisma": "^4.5.0",
     "rand-token": "^1.0.1",
@@ -40,9 +44,9 @@
   },
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
+    "@types/chai": "^4.3.4",
     "@types/cookie-parser": "^1.4.3",
     "@types/jsonwebtoken": "^8.5.9",
-    "@types/mocha": "^10.0.0",
     "@types/swagger-jsdoc": "^6.0.1",
     "@types/swagger-ui-express": "^4.1.3"
   }
